Withdraw command returns successful message when withdrawal is done